# airbnb-automation

./: .env.example  .gitignore  PLAN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RENTAHUMAN_SETUP.md  VALIDATION_CHECKLIST.md  docker-compose.yml  pyproject.toml  rentahuman_client.py
backend/: __init__.py  alembic.ini  celery_config.py  config.py  database.py  main.py  mcp_config_example.json  mcp_server.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260222_001_initial_migration.py  20260222_002_add_external_id_and_updated_at.py  20260222_003_add_payments_notifications_deadline.py  20260222_004_add_ical_url_to_properties.py
backend/api/: __init__.py  analytics.py  auth.py  bookings.py  config.py  deps.py  humans.py  notifications.py  properties.py  tasks.py  webhooks.py
backend/models/: __init__.py  automation_config.py  booking.py  booking_log.py  notification.py  payment.py  property.py  task.py  user.py
backend/schemas/: __init__.py  analytics.py  booking.py  config.py  human.py  property.py  task.py  user.py
backend/services/: __init__.py  airbnb_service.py  booking_engine.py  booking_log_service.py  ical_service.py  notification_service.py  optimizer.py  payment_service.py  preference_learner.py  rentahuman_client.py  storage_service.py  task_generator.py  vrbo_service.py
backend/tasks/: __init__.py  booking_automation.py  notifications.py  polling.py  status_check.py  task_generation.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_rentahuman_client.py  test_services.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ONBOARDING.md  SETUP.md
frontend/: next.config.js  package-lock.json  package.json  package.json.bak  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/analytics/: page.tsx
frontend/app/dashboard/bookings/: page.tsx
frontend/app/dashboard/humans/: page.tsx
frontend/app/dashboard/properties/: page.tsx
frontend/app/dashboard/properties/[id]/: page.tsx
frontend/app/dashboard/properties/[id]/edit/: page.tsx
frontend/app/dashboard/properties/new/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/tasks/: page.tsx
frontend/app/dashboard/tasks/[id]/: page.tsx
frontend/app/dashboard/tasks/new/: page.tsx
frontend/components/: BookingCalendar.tsx  NotificationBell.tsx  index.ts
frontend/lib/: api.ts
frontend/types/: next-auth.d.ts
scripts/: __init__.py  seed_data.py
